z-index fix for detail popups

--- a/UI/src/css/organisms/o-message.css
+++ b/UI/src/css/organisms/o-message.css
@@ -5,6 +5,7 @@ details {
     font-size: var(--font-size-s);
     padding: var(--space-2) var(--space-2) 0 var(--space-2);
     position: relative;
+    z-index: 99;
 
     > div {
         background-color: var(--color-light1);
